# ChangeLog for sys-libs/gwenhywfar
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/gwenhywfar/ChangeLog,v 1.50 2007/11/16 00:25:33 beandog Exp $

  16 Nov 2007; Steve Dibb <beandog@gentoo.org> gwenhywfar-2.6.1.ebuild:
  amd64 stable, bug 192840

  28 Oct 2007; Ferris McCormick <fmccor@gentoo.org> gwenhywfar-2.6.1.ebuild:
  Sparc stable, all tests pass. (Bookkeeping)

  21 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  gwenhywfar-2.6.1.ebuild:
  stable x86, bug 192840

  20 Sep 2007; Raúl Porcel <armin76@gentoo.org> gwenhywfar-1.18.0.ebuild,
  gwenhywfar-2.4.0.ebuild, gwenhywfar-2.4.1.ebuild, gwenhywfar-2.5.1.ebuild,
  gwenhywfar-2.5.2.ebuild, gwenhywfar-2.5.4.ebuild, gwenhywfar-2.6.1.ebuild:
  Drop alpha/ia64 keyword, no hardware to test

  19 Sep 2007; Lars Weiler <pylon@gentoo.org> gwenhywfar-2.6.1.ebuild:
  Stable on ppc; bug #192840.

*gwenhywfar-2.6.1 (01 Aug 2007)

  01 Aug 2007; Hanno Boeck <hanno@gentoo.org> +gwenhywfar-2.6.1.ebuild:
  Version bump.

  25 Jul 2007; Guy Martin <gmsoft@gentoo.org> gwenhywfar-2.5.4.ebuild:
  Added ~hppa to KEYWORDS.

  21 May 2007; Raúl Porcel <armin76@gentoo.org> gwenhywfar-2.4.0.ebuild:
  alpha stable wrt #149970

*gwenhywfar-2.5.4 (02 Apr 2007)

  02 Apr 2007; Hanno Boeck <hanno@gentoo.org> +gwenhywfar-2.5.4.ebuild:
  Version bump.

*gwenhywfar-2.5.2 (26 Jan 2007)

  26 Jan 2007; Hanno Boeck <hanno@gentoo.org> +gwenhywfar-2.5.2.ebuild:
  Version bump.

*gwenhywfar-2.5.1 (17 Jan 2007)

  17 Jan 2007; Hanno Boeck <hanno@gentoo.org> +gwenhywfar-2.5.1.ebuild:
  Version bump.

  22 Dec 2006; Matti Bickel <mabi@gentoo.org> gwenhywfar-2.4.0.ebuild:
  ppc stable (bug #149970)

*gwenhywfar-2.4.1 (04 Dec 2006)

  04 Dec 2006; Hanno Boeck <hanno@gentoo.org> +gwenhywfar-2.4.1.ebuild:
  Version bump.

  04 Nov 2006; <blubb@gentoo.org> gwenhywfar-2.4.0.ebuild:
  stable on amd64

  15 Oct 2006; Aron Griffis <agriffis@gentoo.org> gwenhywfar-2.4.0.ebuild: