@@ -1,5 +1,9 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST gwenhywfar-2.4.0.tar.gz 1176666 RMD160 effa48e2d4576f87affdbf64d1a3d6b65bb142f5 SHA1 9fb439a2db4df5c377783635b2a8cdb433c01a02 SHA256 8165cecc0f28547da16fdc4e4e63c97027f29d5c21b459fda8f20a9bccdd81a7
 DIST gwenhywfar-2.6.1.tar.gz 1201441 RMD160 dbb9c8e93e37f2524a58fefdf5be94548d505ce6 SHA1 6fd20e998946ea6d7b3d154d34090021d86adcf8 SHA256 82f3c663cc19a7e22a7e5fe8290fa8792b3ae36f944abfc7720ddc29c4de541a
+DIST gwenhywfar-2.6.2.tar.gz 1201995 RMD160 9edf83faa03e4dd00e065e1c4c0ce58720993df6 SHA1 ba0329604fc8c125e209387f32f28c15b8728150 SHA256 610b4d7ba6803d40b0324f2efeac862f915feb20feb36b91649328f9ad051705
 EBUILD gwenhywfar-2.4.0.ebuild 1064 RMD160 08d6112758d38db015bd8649b462450903490e84 SHA1 fa80f2ae765aef8d7f981551065e6b185176f57f SHA256 3f9b02a18b52cca8f8df0a4b7ca85046b32593101b59412d8f148adcf76d44e6
 MD5 34b1d3cefc5546c356e122c1bb24b907 gwenhywfar-2.4.0.ebuild 1064
 RMD160 08d6112758d38db015bd8649b462450903490e84 gwenhywfar-2.4.0.ebuild 1064
@@ -8,10 +12,14 @@ EBUILD gwenhywfar-2.6.1.ebuild 1077 RMD160 242940ea70c1bc388c4cb18377b0dd85026a9
 MD5 95b8bfe36e6085612182a2f66015978d gwenhywfar-2.6.1.ebuild 1077
 RMD160 242940ea70c1bc388c4cb18377b0dd85026a93c2 gwenhywfar-2.6.1.ebuild 1077
 SHA256 dae407c8a0ad228171fd391d80c2ba0a1e547b86d2e104a4743bd5583f4e9ce3 gwenhywfar-2.6.1.ebuild 1077
-MISC ChangeLog 6074 RMD160 8bb6b1a76cde5c12ef81df66de0869430ccbf671 SHA1 3da1e1dd2435e98d5eb989d5c818d7cd525b50f2 SHA256 38e8a7864c5bec73031b100dfe50f68ef8e26924564ebd91d12c0ffeecdc4e23
-MD5 3cf7d8ccbd9e3dc69748e230f5c9b64a ChangeLog 6074
-RMD160 8bb6b1a76cde5c12ef81df66de0869430ccbf671 ChangeLog 6074
-SHA256 38e8a7864c5bec73031b100dfe50f68ef8e26924564ebd91d12c0ffeecdc4e23 ChangeLog 6074
+EBUILD gwenhywfar-2.6.2.ebuild 1125 RMD160 9b1377e2ba2b260fdfce1a42030743b750ecb4cf SHA1 4083b988e09e4934c3a5a52680138929ffd871f7 SHA256 2cd1b8a9e2ab4df0aa39b39f02953629faa7854835b760d99491c93ab62b2ac1
+MD5 f067595a5e338595aeb62851e49358cc gwenhywfar-2.6.2.ebuild 1125
+RMD160 9b1377e2ba2b260fdfce1a42030743b750ecb4cf gwenhywfar-2.6.2.ebuild 1125
+SHA256 2cd1b8a9e2ab4df0aa39b39f02953629faa7854835b760d99491c93ab62b2ac1 gwenhywfar-2.6.2.ebuild 1125
+MISC ChangeLog 6194 RMD160 7ea4399f57a66ee904514a95674e24c8d960ddb6 SHA1 882ab0dfb6e4c1c17ee9601a7056d470b11c0eec SHA256 79d7318b6b3abf040efdb1a2edb6f88eada5014d4bcb25bc3f736e255cd4ac4e
+MD5 45e5ca975a1e5efc02ff3152d178e164 ChangeLog 6194
+RMD160 7ea4399f57a66ee904514a95674e24c8d960ddb6 ChangeLog 6194
+SHA256 79d7318b6b3abf040efdb1a2edb6f88eada5014d4bcb25bc3f736e255cd4ac4e ChangeLog 6194
 MISC metadata.xml 217 RMD160 3b01d5dab901ee93217f72b711954d3cccbb1717 SHA1 e304788b60dd2cf214d360a21d267e8635474d98 SHA256 2f5dfc1eb79d2d9ee02663da6e1449f499c3a37b7f4cc2391e18d7789a314669
 MD5 a72a06a37ca4e5905085ebff07fe9e9e metadata.xml 217
 RMD160 3b01d5dab901ee93217f72b711954d3cccbb1717 metadata.xml 217
@@ -22,3 +30,13 @@ SHA256 941fcf86c0ce090f68abf6416209d1744fccf2ddd688a0073e10ca9ec20baee5 files/di
 MD5 a69edbd8a7a6babc1928b78ae927dd00 files/digest-gwenhywfar-2.6.1 253
 RMD160 162e6f249e2e9709497b9b2b25d89398cffc6e87 files/digest-gwenhywfar-2.6.1 253
 SHA256 c56b03cda60e7da622832e6f9122f4f92c836a5089e0ab1da6be91289a95803b files/digest-gwenhywfar-2.6.1 253
+MD5 1a7233017872281fc0b4eefad0142a11 files/digest-gwenhywfar-2.6.2 253
+RMD160 ba75518d0ca344c02386789f93c59e4a1b3f5585 files/digest-gwenhywfar-2.6.2 253
+SHA256 70c4da9b8661f299fa8a6bb3cef6446f4b19b6e0839190cbcc86f1107f782746 files/digest-gwenhywfar-2.6.2 253
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD4DBQFHQcEIr2QksT29OyARAgc9AJ9gJ4u1AgAm5bA0iRnc11+E2WxPmgCYlGxi
+N+eWJmJIS3dF1FiWv26GCw==
+=QAf6
+-----END PGP SIGNATURE-----
