@@ -1,0 +1,3 @@
+MD5 fec3bc3653b7809cc44526b6fed52ab2 gwenhywfar-2.6.2.tar.gz 1201995
+RMD160 9edf83faa03e4dd00e065e1c4c0ce58720993df6 gwenhywfar-2.6.2.tar.gz 1201995
+SHA256 610b4d7ba6803d40b0324f2efeac862f915feb20feb36b91649328f9ad051705 gwenhywfar-2.6.2.tar.gz 1201995
